Edit Article ,video And nav Servies

--- a/src/app/components/admin/news/list-news/list-news.component.html
+++ b/src/app/components/admin/news/list-news/list-news.component.html
@@ -5,14 +5,14 @@
                 <div class="card-header" style="padding-bottom: 5px !important">
                     <div class="row">
                         <div class="col-6">
-                            <h5 class="pb-2">التصنيفات</h5>
+                            <h5 class="pb-2">الاخبار</h5>
                
                         </div>
 
                         <div class="col-6 header-titles">
                             <a routerLink="/content/admin/insert-category" class="d-block">
                                 <button class="btn pull-right " type="button">
-                                    <span class="m-2"> التصنيف</span>
+                                    <span class="m-2"> الخبر</span>
                                     <i class="fa fa-plus"></i>
                                 </button>
                             </a>
@@ -25,8 +25,8 @@
                             <table class="table table-responsive-sm text-center">
                                 <thead>
                                     <th scope="col" class="f-16  text-white">#</th>
-                                    <th scope="col" class="f-16  text-white">التصنيف باللغة العربية </th>
-                                    <th scope="col" class="f-16  text-white">التصنيف باللغة الانجليزية</th>
+                                    <th scope="col" class="f-16  text-white">الخبر باللغة العربية </th>
+                                    <th scope="col" class="f-16  text-white">الخبر باللغة الانجليزية</th>
                                     <th scope="col" class="f-16  text-white">المحتوي باللغة العربية </th>
                                     <th scope="col" class="f-16  text-white">المحتوي باللغة الانجليزية</th>                                  
                                     <th scope="col" class="f-16  text-white">  المشاهدات </th>
