--- a/src/app/components/admin/video/list-video/list-video.component.html
+++ b/src/app/components/admin/video/list-video/list-video.component.html
@@ -5,14 +5,14 @@
                 <div class="card-header" style="padding-bottom: 5px !important">
                     <div class="row">
                         <div class="col-6">
-                            <h5 class="pb-2">التصنيفات</h5>
+                            <h5 class="pb-2">الفيدوهات</h5>
                
                         </div>
 
                         <div class="col-6 header-titles">
                             <a routerLink="/content/admin/insert-category" class="d-block">
                                 <button class="btn pull-right " type="button">
-                                    <span class="m-2"> التصنيف</span>
+                                    <span class="m-2"> الفيديو</span>
                                     <i class="fa fa-plus"></i>
                                 </button>
                             </a>
